Feat/add docs to storybook (#271)
* feat: add basic documentation to the existing components

* chore: fix lockfile

* chore: changeset

* fix: move documentation to comments/types rather than embedding in stories

* fix: update configuration to generate more accurate prop descriptions

* fix: swap to the @link block instead of the a tag in the docblock

* style: update alt text for avatar examples

* fix: circular type deps

* fix: attempt to fix build error

* chore: regenerate pnpm-lock with pnpm 9

* chore: change node version to 18

* fix: attempt to update pnpm-lock based on main

* fix: update default background colors

* fix: update spacing story bg color

* fix: update colors

* fix: add focus styles

* fix: update storybook

* fix: swap borders to outlines and add label

* fix: update the text weights

* fix: update package.json exports

---------

Co-authored-by: Bryan Kizer <bryan.kizer@hypergiant.com>

--- a/design-toolkit/components/package.json
+++ b/design-toolkit/components/package.json
@@ -8,9 +8,7 @@
     "url": "https://github.com/gohypergiant/standard-toolkit/design-toolkit"
   },
   "type": "module",
-  "files": [
-    "dist/**"
-  ],
+  "files": ["dist/**"],
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
@@ -68,6 +66,13 @@
         "default": "./dist/components/icon-button/index.js"
       },
       "default": "./dist/components/icon-button/index.js"
+    },
+    "./label": {
+      "import": {
+        "types": "./dist/components/label/index.d.ts",
+        "default": "./dist/components/label/index.js"
+      },
+      "default": "./dist/components/label/index.js"
     },
     "./toggle-icon-button": {
       "import": {
@@ -132,9 +137,12 @@
     "@fontsource/roboto-flex": "5.1.0",
     "@fontsource/roboto-mono": "5.1.0",
     "@storybook/addon-essentials": "^8.6.12",
+    "@storybook/blocks": "8.6.12",
     "@storybook/builder-vite": "8.6.12",
+    "@storybook/manager-api": "8.6.12",
     "@storybook/react": "^8.6.12",
     "@storybook/react-vite": "^8.6.12",
+    "@storybook/theming": "8.6.12",
     "@tailwindcss/cli": "4.1.4",
     "@tailwindcss/vite": "^4.1.4",
     "@testing-library/dom": "10.4.0",
