--- a/design-toolkit/components/tsconfig.json
+++ b/design-toolkit/components/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
   "extends": "@accelint/typescript-config/tsc/dom/library",
-  "include": ["./src"],
+  "include": ["./src", "./.storybook/*.tsx"],
   "exclude": [
     "node_modules",
     "**/*.bench.ts",
@@ -10,7 +10,7 @@
   ],
   "compilerOptions": {
     "jsx": "react-jsx",
-    "rootDir": "src",
+    "rootDir": "./",
     "outDir": "dist",
     "paths": {
       "@/*": ["./src/*"]
