feat: add chip component (#277)
* feat: add basic documentation to the existing components

* chore: fix lockfile

* chore: changeset

* fix: move documentation to comments/types rather than embedding in stories

* fix: update configuration to generate more accurate prop descriptions

* fix: swap to the @link block instead of the a tag in the docblock

* style: update alt text for avatar examples

* fix: circular type deps

* fix: attempt to fix build error

* chore: regenerate pnpm-lock with pnpm 9

* chore: change node version to 18

* fix: attempt to update pnpm-lock based on main

* fix: update default background colors

* fix: update spacing story bg color

* fix: update colors

* feat: add in the chips

* fix: add focus styles to the chips

* fix: add focus styles

* fix: update storybook

* fix: swap borders to outlines and add label

* fix: update the text weights

* fix: swap to outline and add support for icons

* fix: update package.json exports

* fix: update package.json exports

* fix: update story for chips

* fix: add a comment to describe the Coordinator in the chip component

---------

Co-authored-by: Bryan Kizer <bryan.kizer@hypergiant.com>

--- a/design-toolkit/components/package.json
+++ b/design-toolkit/components/package.json
@@ -46,6 +46,13 @@
       },
       "default": "./dist/components/checkbox/index.js"
     },
+    "./chip": {
+      "import": {
+        "types": "./dist/components/chip/index.d.ts",
+        "default": "./dist/components/chip/index.js"
+      },
+      "default": "./dist/components/chip/index.js"
+    },
     "./classification-badge": {
       "import": {
         "types": "./dist/components/classification-badge/index.d.ts",
@@ -137,9 +144,9 @@
   "peerDependencies": {
     "@radix-ui/react-avatar": "^1.1.4",
     "@react-types/shared": "3.25.0",
-    "react": "^18.0.0 || ^19.0.0",
-    "react-aria-components": "1.7.1",
-    "react-dom": "^18.0.0 || ^19.0.0",
+    "react": "^19.0.0",
+    "react-aria-components": "1.8.0",
+    "react-dom": "^19.0.0",
     "tailwindcss": "^4.1.3"
   },
   "dependencies": {
