feat: add the textarea component. (#281)
* feat: add basic documentation to the existing components

* chore: fix lockfile

* chore: changeset

* fix: move documentation to comments/types rather than embedding in stories

* fix: update configuration to generate more accurate prop descriptions

* fix: swap to the @link block instead of the a tag in the docblock

* style: update alt text for avatar examples

* fix: circular type deps

* fix: attempt to fix build error

* chore: regenerate pnpm-lock with pnpm 9

* chore: change node version to 18

* fix: attempt to update pnpm-lock based on main

* fix: update default background colors

* fix: update spacing story bg color

* fix: update colors

* fix: add focus styles

* fix: update storybook

* feat: added text field component

* fix: swap borders to outlines and add label

* fix: update the text weights

* fix: update the text-field to handle the new isClearable property

* fix: some cleanup around readonly

* fix: fix an issue with the keyboard event listener

* feat: add the textarea component.

* chore: changeset

* fix: update package.json exports

* fix: update package.json exports

* fix: update package.json exports

* fix: update readonly style for textfield

* fix: update readonly styles

---------

Co-authored-by: Bryan Kizer <bryan.kizer@hypergiant.com>

--- a/design-toolkit/components/package.json
+++ b/design-toolkit/components/package.json
@@ -109,6 +109,13 @@
       },
       "default": "./dist/components/switch/index.js"
     },
+    "./text-area": {
+      "import": {
+        "types": "./dist/components/text-area/index.d.ts",
+        "default": "./dist/components/text-area/index.js"
+      },
+      "default": "./dist/components/text-area/index.js"
+    },
     "./text-field": {
       "import": {
         "types": "./dist/components/text-field/index.d.ts",
