feat: add accordion (#275)
* feat: add basic documentation to the existing components

* chore: fix lockfile

* chore: changeset

* fix: move documentation to comments/types rather than embedding in stories

* fix: update configuration to generate more accurate prop descriptions

* fix: swap to the @link block instead of the a tag in the docblock

* style: update alt text for avatar examples

* feat: initial accordion setup

* fix: circular type deps

* feat: update accordion component and update some token names

* fix: update padding issue on the accordion

* fix: attempt to fix build error

* chore: regenerate pnpm-lock with pnpm 9

* chore: change node version to 18

* fix: attempt to update pnpm-lock based on main

* fix: update default background colors

* fix: update spacing story bg color

* fix: update colors

* fix: add focus styles

* fix: update storybook

* fix: swap borders to outlines and add label

* fix: update the text weights

* fix: add the focus styles for the accordion and fix a bug

* fix: update package.json exports

* fix: update package.json exports

* chore: changeset

* style: updated the accordion component to match the naming convention

* style: remove composeRenderProps

---------

Co-authored-by: Bryan Kizer <bryan.kizer@hypergiant.com>

--- a/design-toolkit/components/package.json
+++ b/design-toolkit/components/package.json
@@ -18,6 +18,13 @@
       },
       "default": "./dist/index.js"
     },
+    "./accordion": {
+      "import": {
+        "types": "./dist/components/accordion/index.d.ts",
+        "default": "./dist/components/accordion/index.js"
+      },
+      "default": "./dist/components/accordion/index.js"
+    },
     "./avatar": {
       "import": {
         "types": "./dist/components/avatar/index.d.ts",
@@ -152,6 +159,7 @@
     "index": "pnpm zx ../../scripts/indexer.mjs design-toolkit/components",
     "lint": "pnpm biome lint",
     "preview": "pnpm storybook dev -p 6006",
+    "preview:docs": "pnpm storybook dev --docs -p 6006",
     "test": "pnpm vitest --dir=src",
     "build-storybook": "pnpm storybook build"
   },
