feat: add individual exports for the icons and simplify component export (#294)
* feat: add individual exports for the icons

* feat: simplify exports for components

* chore: add changeset

* feat: add individual export for utils

--- a/design-toolkit/components/package.json
+++ b/design-toolkit/components/package.json
@@ -18,137 +18,25 @@
       },
       "default": "./dist/index.js"
     },
-    "./accordion": {
+    "./*": {
       "import": {
-        "types": "./dist/components/accordion/index.d.ts",
-        "default": "./dist/components/accordion/index.js"
+        "types": "./dist/components/*/index.d.ts",
+        "default": "./dist/components/*/index.js"
       },
-      "default": "./dist/components/accordion/index.js"
-    },
-    "./avatar": {
-      "import": {
-        "types": "./dist/components/avatar/index.d.ts",
-        "default": "./dist/components/avatar/index.js"
-      },
-      "default": "./dist/components/avatar/index.js"
-    },
-    "./badge": {
-      "import": {
-        "types": "./dist/components/badge/index.d.ts",
-        "default": "./dist/components/badge/index.js"
-      },
-      "default": "./dist/components/badge/index.js"
-    },
-    "./button": {
-      "import": {
-        "types": "./dist/components/button/index.d.ts",
-        "default": "./dist/components/button/index.js"
-      },
-      "default": "./dist/components/button/index.js"
-    },
-    "./checkbox": {
-      "import": {
-        "types": "./dist/components/checkbox/index.d.ts",
-        "default": "./dist/components/checkbox/index.js"
-      },
-      "default": "./dist/components/checkbox/index.js"
-    },
-    "./chip": {
-      "import": {
-        "types": "./dist/components/chip/index.d.ts",
-        "default": "./dist/components/chip/index.js"
-      },
-      "default": "./dist/components/chip/index.js"
-    },
-    "./classification-badge": {
-      "import": {
-        "types": "./dist/components/classification-badge/index.d.ts",
-        "default": "./dist/components/classification-badge/index.js"
-      },
-      "default": "./dist/components/classification-badge/index.js"
-    },
-    "./classification-banner": {
-      "import": {
-        "types": "./dist/components/classification-banner/index.d.ts",
-        "default": "./dist/components/classification-banner/index.js"
-      },
-      "default": "./dist/components/classification-banner/index.js"
-    },
-    "./floating-button": {
-      "import": {
-        "types": "./dist/components/floating-button/index.d.ts",
-        "default": "./dist/components/floating-button/index.js"
-      },
-      "default": "./dist/components/floating-button/index.js"
-    },
-    "./icon": {
-      "import": {
-        "types": "./dist/components/icon/index.d.ts",
-        "default": "./dist/components/icon/index.js"
-      },
-      "default": "./dist/components/icon/index.js"
-    },
-    "./icon-button": {
-      "import": {
-        "types": "./dist/components/icon-button/index.d.ts",
-        "default": "./dist/components/icon-button/index.js"
-      },
-      "default": "./dist/components/icon-button/index.js"
-    },
-    "./label": {
-      "import": {
-        "types": "./dist/components/label/index.d.ts",
-        "default": "./dist/components/label/index.js"
-      },
-      "default": "./dist/components/label/index.js"
-    },
-    "./radio": {
-      "import": {
-        "types": "./dist/components/radio/index.d.ts",
-        "default": "./dist/components/radio/index.js"
-      },
-      "default": "./dist/components/radio/index.js"
-    },
-    "./switch": {
-      "import": {
-        "types": "./dist/components/switch/index.d.ts",
-        "default": "./dist/components/switch/index.js"
-      },
-      "default": "./dist/components/switch/index.js"
-    },
-    "./text-area": {
-      "import": {
-        "types": "./dist/components/text-area/index.d.ts",
-        "default": "./dist/components/text-area/index.js"
-      },
-      "default": "./dist/components/text-area/index.js"
-    },
-    "./text-field": {
-      "import": {
-        "types": "./dist/components/text-field/index.d.ts",
-        "default": "./dist/components/text-field/index.js"
-      },
-      "default": "./dist/components/text-field/index.js"
-    },
-    "./toggle-icon-button": {
-      "import": {
-        "types": "./dist/components/toggle-icon-button/index.d.ts",
-        "default": "./dist/components/toggle-icon-button/index.js"
-      },
-      "default": "./dist/components/toggle-icon-button/index.js"
-    },
-    "./tooltip": {
-      "import": {
-        "types": "./dist/components/tooltip/index.d.ts",
-        "default": "./dist/components/tooltip/index.js"
-      },
-      "default": "./dist/components/tooltip/index.js"
+      "default": "./dist/components/*/index.js"
     },
     "./styles": {
       "import": {
         "default": "./dist/index.css"
       },
       "default": "./dist/index.css"
+    },
+    "./utils": {
+      "import": {
+        "types": "./dist/lib/utils.d.ts",
+        "default": "./dist/lib/utils.js"
+      },
+      "default": "./dist/lib/utils.js"
     }
   },
   "scripts": {
