feat: smeegl cli (#290)
* feat: initial sprite building

* build: update lock after moving folder

* refactor: split into util folder

* feat: add constant generation

* refactor: clean up types

* refactor: change error path to pass down tmp dir

* refactor: move smeegl to tooling

* build: change biome override

* fix: add shebang

* fix: remove left-over log

* docs: add a little more to readme

* docs: readme tweak

* build: move some packages to dev deps

* build: add ts dep

* docs: add additional line calling out spreet dep

* fix: pr comments

--- a/biome.json
+++ b/biome.json
@@ -73,6 +73,28 @@
           }
         }
       }
+    },
+    {
+      "include": ["tooling/smeegl"],
+      "linter": {
+        "rules": {
+          "style": {
+            "useNamingConvention": {
+              "level": "error",
+              "options": {
+                "conventions": [
+                  {
+                    "selector": {
+                      "kind": "objectLiteralProperty"
+                    },
+                    "formats": ["PascalCase", "camelCase"]
+                  }
+                ]
+              }
+            }
+          }
+        }
+      }
     }
   ]
 }
