--- a/packages/predicates/package.json
+++ b/packages/predicates/package.json
@@ -33,6 +33,7 @@
     "@accelint/vitest-config": "workspace:*",
     "@vitest/web-worker": "2.1.3",
     "esbuild-plugin-file-path-extensions": "2.1.3",
+    "fast-check": "4.1.1",
     "tsup": "8.4.0",
     "vitest": "2.1.3"
   },
