--- a/design-toolkit/components/package.json
+++ b/design-toolkit/components/package.json
@@ -176,6 +176,8 @@
   },
   "dependencies": {
     "@accelint/icons": "workspace:*",
+    "@internationalized/date": "3.8.0",
+    "@react-stately/datepicker": "3.13.0",
     "client-only": "0.0.1",
     "clsx": "^2.1.1",
     "cva": "npm:class-variance-authority@^0.7.1",
