--- a/design-toolkit/components/package.json
+++ b/design-toolkit/components/package.json
@@ -8,9 +8,7 @@
     "url": "https://github.com/gohypergiant/standard-toolkit/design-toolkit"
   },
   "type": "module",
-  "files": [
-    "dist/**"
-  ],
+  "files": ["dist/**"],
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
@@ -58,6 +56,7 @@
     "@fontsource/roboto-flex": "5.1.0",
     "@fontsource/roboto-mono": "5.1.0",
     "@radix-ui/react-avatar": "^1.1.4",
+    "@react-stately/color": "3.8.6",
     "@react-types/shared": "3.25.0",
     "react": "^19.0.0",
     "react-aria-components": "1.8.0",
@@ -66,6 +65,7 @@
   },
   "dependencies": {
     "@accelint/icons": "workspace:*",
+    "@react-stately/utils": "3.10.7",
     "client-only": "0.0.1",
     "clsx": "^2.1.1",
     "cva": "npm:class-variance-authority@^0.7.1",
