--- a/design-toolkit/components/package.json
+++ b/design-toolkit/components/package.json
@@ -56,6 +56,7 @@
     "@fontsource/roboto-flex": "5.1.0",
     "@fontsource/roboto-mono": "5.1.0",
     "@radix-ui/react-avatar": "^1.1.4",
+    "@react-aria/ssr": "3.9.6",
     "@react-types/shared": "3.25.0",
     "react": "^19.0.0",
     "react-aria-components": "1.8.0",
