feat: added options component

--- a/design-toolkit/components/package.json
+++ b/design-toolkit/components/package.json
@@ -8,9 +8,7 @@
     "url": "https://github.com/gohypergiant/standard-toolkit/design-toolkit"
   },
   "type": "module",
-  "files": [
-    "dist/**"
-  ],
+  "files": ["dist/**"],
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
@@ -58,6 +56,7 @@
     "@fontsource/roboto-flex": "5.1.0",
     "@fontsource/roboto-mono": "5.1.0",
     "@radix-ui/react-avatar": "^1.1.4",
+    "@react-aria/utils": "3.29.1",
     "@react-types/shared": "3.25.0",
     "react": "^19.0.0",
     "react-aria-components": "1.8.0",
@@ -80,6 +79,7 @@
     "@accelint/typescript-config": "workspace:*",
     "@accelint/vitest-config": "workspace:*",
     "@storybook/addon-essentials": "^8.6.12",
+    "@storybook/addon-storysource": "8.6.14",
     "@storybook/blocks": "8.6.12",
     "@storybook/builder-vite": "8.6.12",
     "@storybook/manager-api": "8.6.12",
