--- a/design-toolkit/components/package.json
+++ b/design-toolkit/components/package.json
@@ -8,9 +8,7 @@
     "url": "https://github.com/gohypergiant/standard-toolkit/design-toolkit"
   },
   "type": "module",
-  "files": [
-    "dist/**"
-  ],
+  "files": ["dist/**"],
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
@@ -73,7 +71,7 @@
     "@react-aria/ssr": "3.9.6",
     "@react-types/shared": "3.25.0",
     "react": "^19.0.0",
-    "react-aria-components": "1.8.0",
+    "react-aria-components": "1.10.1",
     "react-dom": "^19.0.0",
     "react-querybuilder": "8.6.2",
     "tailwindcss": "^4.1.3"
@@ -84,6 +82,7 @@
     "client-only": "0.0.1",
     "clsx": "^2.1.1",
     "cva": "npm:class-variance-authority@^0.7.1",
+    "immer": "10.1.1",
     "lodash": "4.17.21",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
