--- a/design-toolkit/components/package.json
+++ b/design-toolkit/components/package.json
@@ -8,9 +8,7 @@
     "url": "https://github.com/gohypergiant/standard-toolkit/design-toolkit"
   },
   "type": "module",
-  "files": [
-    "dist/**"
-  ],
+  "files": ["dist/**"],
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
@@ -62,20 +60,21 @@
   },
   "peerDependencies": {
     "@accelint/icons": "^2.0.0",
-    "@fontsource/roboto-flex": "5.1.0",
-    "@fontsource/roboto-mono": "5.1.0",
-    "@internationalized/date": "3.8.0",
+    "@fontsource/roboto-flex": "^5.1.0",
+    "@fontsource/roboto-mono": "^5.1.0",
+    "@internationalized/date": "^3.8.0",
     "@radix-ui/react-avatar": "^1.1.4",
-    "@react-aria/utils": "3.29.1",
-    "@react-stately/color": "3.8.6",
-    "@react-stately/datepicker": "3.13.0",
-    "@react-stately/utils": "3.10.7",
-    "@react-aria/ssr": "3.9.6",
-    "@react-types/shared": "3.25.0",
+    "@react-aria/utils": "^3.29.1",
+    "@react-stately/color": "^3.8.6",
+    "@react-stately/datepicker": "^3.14.2",
+    "@react-stately/utils": "^3.10.7",
+    "@react-aria/ssr": "^3.9.6",
+    "@react-types/shared": "^3.25.0",
     "react": "^19.0.0",
-    "react-aria-components": "1.8.0",
+    "react-aria-components": "^1.10.1",
     "react-dom": "^19.0.0",
-    "react-querybuilder": "8.6.2",
+    "react-querybuilder": "^8.6.2",
+    "tailwind-variants": "^1.0.0",
     "tailwindcss": "^4.1.3"
   },
   "dependencies": {
