--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -74,8 +74,8 @@
     "@testing-library/react": "16.3.0",
     "@testing-library/user-event": "14.6.1",
     "@types/lodash": "4.17.10",
-    "@types/react": "18.3.11",
-    "@types/react-dom": "18.3.1",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
     "@vanilla-extract/esbuild-plugin": "2.3.11",
     "@vanilla-extract/vite-plugin": "4.0.16",
     "autoprefixer": "10.4.20",
