chore: 🤖 fix linting, support constant case

--- a/biome.json
+++ b/biome.json
@@ -33,7 +33,7 @@
                     "selector": {
                       "kind": "objectLiteralMember"
                     },
-                    "formats": ["PascalCase", "camelCase"]
+                    "formats": ["PascalCase", "camelCase", "CONSTANT_CASE"]
                   }
                 ]
               }
