feat: port slider (#315)

--- a/.npmrc
+++ b/.npmrc
@@ -7,3 +7,6 @@ fund=false
 auto-install-peers=true
 link-workspace-packages=false
 public-hoist-pattern[]=*@vitest/coverage-istanbul* # https://pnpm.io/npmrc#public-hoist-pattern
+
+#node
+node-options="--max-old-space-size=8192"
