--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -42,25 +42,25 @@
     "test": "pnpm vitest --dir=src"
   },
   "peerDependencies": {
-    "@internationalized/date": "3.8.0",
-    "@react-aria/collections": "3.0.0-alpha.5",
-    "@react-aria/datepicker": "3.14.1",
-    "@react-aria/dnd": "3.7.4",
-    "@react-aria/focus": "3.18.4",
-    "@react-aria/i18n": "3.12.4",
-    "@react-aria/interactions": "3.22.4",
-    "@react-aria/overlays": "3.27.1",
-    "@react-aria/ssr": "3.9.6",
-    "@react-aria/utils": "3.25.3",
-    "@react-stately/data": "3.11.7",
-    "@react-stately/datepicker": "3.13.0",
-    "@react-stately/overlays": "3.6.11",
-    "@react-stately/utils": "3.10.4",
-    "@react-types/shared": "3.25.0",
+    "@internationalized/date": "^3.8.0",
+    "@react-aria/collections": "^3.0.0-rc.3",
+    "@react-aria/datepicker": "^3.14.5",
+    "@react-aria/dnd": "^3.10.1",
+    "@react-aria/focus": "^3.20.5",
+    "@react-aria/i18n": "^3.12.10",
+    "@react-aria/interactions": "^3.25.3",
+    "@react-aria/overlays": "^3.27.3",
+    "@react-aria/ssr": "^3.9.6",
+    "@react-aria/utils": "^3.29.1",
+    "@react-stately/data": "^3.13.1",
+    "@react-stately/datepicker": "^3.14.2",
+    "@react-stately/overlays": "^3.6.17",
+    "@react-stately/utils": "^3.10.7",
+    "@react-types/shared": "^3.25.0",
     "react": "^18.0.0 || ^19.0.0",
-    "react-aria-components": "1.4.1",
+    "react-aria-components": "^1.10.1",
     "react-dom": "^18.0.0 || ^19.0.0",
-    "react-querybuilder": "7.7.0"
+    "react-querybuilder": "^7.7.0"
   },
   "devDependencies": {
     "@accelint/biome-config": "workspace:*",
