--- a/design-toolkit/components/package.json
+++ b/design-toolkit/components/package.json
@@ -66,6 +66,7 @@
     "@radix-ui/react-avatar": "^1.1.4",
     "@react-aria/utils": "3.29.1",
     "@react-stately/color": "3.8.6",
+    "@react-stately/data": "^3.13.1",
     "@react-stately/datepicker": "3.13.0",
     "@react-stately/utils": "3.10.7",
     "@react-aria/ssr": "3.9.6",
