feat: generate tokens from json

--- a/design-toolkit/components/tsconfig.dist.json
+++ b/design-toolkit/components/tsconfig.dist.json
@@ -4,6 +4,7 @@
     "components/.storybook/*",
     "./components/src/**/*.stories.tsx",
     "./components/src/**/*.test.ts",
-    "./components/src/**/*.test.tsx"
+    "./components/src/**/*.test.tsx",
+    "./components/scripts/**"
   ]
 }
