--- a/design-toolkit/components/package.json
+++ b/design-toolkit/components/package.json
@@ -65,8 +65,8 @@
     "@internationalized/date": "^3.8.0",
     "@radix-ui/react-avatar": "^1.1.4",
     "@react-aria/utils": "^3.29.1",
+    "@react-aria/dnd": "^3.10.1",
     "@react-stately/color": "^3.8.6",
-    "@react-stately/data": "^3.13.1",
     "@react-stately/datepicker": "^3.14.2",
     "@react-stately/utils": "^3.10.7",
     "@react-aria/ssr": "^3.9.6",
