--- a/design-toolkit/components/tsconfig.json
+++ b/design-toolkit/components/tsconfig.json
@@ -10,6 +10,7 @@
   ],
   "compilerOptions": {
     "jsx": "react-jsx",
+    "lib": ["ESNext"],
     "rootDir": "./",
     "outDir": "dist",
     "paths": {
