chore: Adding a few suggested packages

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,16 @@
   "recommendations": [
     "editorconfig.editorconfig",
     "redhat.vscode-yaml",
-    "biomejs.biome"
+    "biomejs.biome",
+    "github.remotehub",
+    "ms-vscode.remote-repositories",
+    "github.vscode-pull-request-github",
+    "gitlab.gitlab-workflow",
+    "eamodio.gitlens",
+    "mhutchie.git-graph",
+    "streetsidesoftware.code-spell-checker",
+    "bradlc.vscode-tailwindcss",
+    "natqe.reload",
+    "johnpapa.vscode-peacock"
   ]
 }
