--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -12,6 +12,7 @@
     "streetsidesoftware.code-spell-checker",
     "bradlc.vscode-tailwindcss",
     "natqe.reload",
-    "johnpapa.vscode-peacock"
+    "johnpapa.vscode-peacock",
+    "anseki.vscode-color"
   ]
 }
