refactor: 💡 avatar and badge to new styling standard

--- a/design-toolkit/components/package.json
+++ b/design-toolkit/components/package.json
@@ -8,9 +8,7 @@
     "url": "https://github.com/gohypergiant/standard-toolkit/design-toolkit"
   },
   "type": "module",
-  "files": [
-    "dist/**"
-  ],
+  "files": ["dist/**"],
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
@@ -73,6 +71,7 @@
     "@react-stately/utils": "^3.10.7",
     "@react-aria/ssr": "^3.9.6",
     "@react-types/shared": "^3.25.0",
+    "@react-types/overlays": "^3.8.16",
     "react": "^19.0.0",
     "react-aria-components": "^1.10.1",
     "react-dom": "^19.0.0",
