refactor: 💡 remove hero reordering, handle child functions/frag

--- a/design-toolkit/components/tsconfig.json
+++ b/design-toolkit/components/tsconfig.json
@@ -16,6 +16,6 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "types": ["@testing-library/jest-dom"]
+    "types": ["@testing-library/jest-dom", "node"]
   }
 }
