--- a/design-toolkit/components/package.json
+++ b/design-toolkit/components/package.json
@@ -8,9 +8,7 @@
     "url": "https://github.com/gohypergiant/standard-toolkit/design-toolkit"
   },
   "type": "module",
-  "files": [
-    "dist/**"
-  ],
+  "files": ["dist/**"],
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
@@ -116,8 +114,7 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "autoprefixer": "10.4.20",
-    "esbuild-fix-imports-plugin": "1.0.19",
-    "esbuild-plugin-file-path-extensions": "2.1.3",
+    "esbuild-fix-imports-plugin": "1.0.21",
     "jsdom": "25.0.1",
     "postcss": "8.4.47",
     "storybook": "^8.6.12",
