build: add subpath exports to packages (#390)

--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -30,6 +30,13 @@
         "default": "./dist/vanilla.js"
       },
       "default": "./dist/vanilla.js"
+    },
+    "./*": {
+      "import": {
+        "types": "./dist/*/index.d.ts",
+        "default": "./dist/*/index.js"
+      },
+      "default": "./dist/*/index.js"
     }
   },
   "scripts": {
