--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -18,6 +18,13 @@
       },
       "default": "./dist/index.js"
     },
+    "./*": {
+      "import": {
+        "types": "./dist/*/index.d.ts",
+        "default": "./dist/*/index.js"
+      },
+      "default": "./dist/*/index.js"
+    },
     "./package.json": "./package.json"
   },
   "scripts": {
