--- a/design-toolkit/components/package.json
+++ b/design-toolkit/components/package.json
@@ -97,6 +97,7 @@
     "@accelint/biome-config": "workspace:*",
     "@accelint/typescript-config": "workspace:*",
     "@accelint/vitest-config": "workspace:*",
+    "@storybook/addon-actions": "^8.6.12",
     "@storybook/addon-essentials": "^8.6.12",
     "@storybook/addon-storysource": "8.6.14",
     "@storybook/blocks": "8.6.12",
