--- a/design-toolkit/components/package.json
+++ b/design-toolkit/components/package.json
@@ -8,7 +8,9 @@
     "url": "https://github.com/gohypergiant/standard-toolkit/design-toolkit"
   },
   "type": "module",
-  "files": ["dist/**"],
+  "files": [
+    "dist/**"
+  ],
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
@@ -67,11 +69,12 @@
     "@fontsource/roboto-mono": "^5.1.0",
     "@internationalized/date": "^3.8.0",
     "@radix-ui/react-avatar": "^1.1.4",
+    "@react-aria/interactions": "3.25.3",
+    "@react-aria/ssr": "^3.9.6",
     "@react-aria/utils": "^3.29.1",
     "@react-stately/color": "^3.8.6",
     "@react-stately/datepicker": "^3.14.2",
     "@react-stately/utils": "^3.10.7",
-    "@react-aria/ssr": "^3.9.6",
     "@react-types/shared": "^3.25.0",
     "@react-types/overlays": "^3.8.16",
     "react": "^19.0.0",
@@ -98,6 +101,7 @@
     "@accelint/typescript-config": "workspace:*",
     "@accelint/vitest-config": "workspace:*",
     "@storybook/addon-actions": "^8.6.12",
+    "@react-aria/interactions": "3.25.3",
     "@storybook/addon-essentials": "^8.6.12",
     "@storybook/addon-storysource": "8.6.14",
     "@storybook/blocks": "8.6.12",
