--- a/design-toolkit/components/package.json
+++ b/design-toolkit/components/package.json
@@ -74,9 +74,9 @@
     "@react-stately/utils": "^3.10.8",
     "@react-types/overlays": "^3.9.0",
     "@react-types/shared": "^3.31.0",
+    "@react-aria/interactions": "^3.25.3",
     "class-variance-authority": "^0.7.1",
-    "@react-aria/interactions": "3.25.3",
-    "client-only": "0.0.1",
+    "client-only": "^0.0.1",
     "clsx": "^2.1.1",
     "lodash": "^4.17.21",
     "react": "^19.0.0",
@@ -121,7 +121,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/lodash": "^4.17.20",
-    "@react-aria/interactions": "3.25.3",
+    "@react-aria/interactions": "^3.25.3",
     "@types/node": "^24.1.0",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
@@ -146,7 +146,7 @@
     "typescript": "^5.8.3",
     "vite": "^5.4.9",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "2.1.3",
+    "vitest": "^2.1.3",
     "zod": "^4.0.13"
   },
   "$schema": "https://json.schemastore.org/package",
