--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -8,9 +8,7 @@
     "url": "https://github.com/gohypergiant/standard-toolkit"
   },
   "type": "module",
-  "files": [
-    "dist/**"
-  ],
+  "files": ["dist/**"],
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
@@ -41,10 +39,17 @@
     "@accelint/vitest-config": "workspace:*",
     "esbuild-fix-imports-plugin": "1.0.21",
     "tsup": "8.5.0",
-    "vitest": "2.1.3"
+    "type-fest": "^4.41.0",
+    "typescript": "^5.8.3",
+    "uuid": "^11.1.0",
+    "vitest": "2.1.3",
+    "zod": "^4.0.15"
   },
-  "dependencies": {
-    "typescript": "^5.8.3"
+  "peerDependencies": {
+    "type-fest": "^4.41.0",
+    "typescript": "^5.8.3",
+    "uuid": "^11.1.0",
+    "zod": "^4.0.15"
   },
   "$schema": "https://json.schemastore.org/package",
   "author": "https://hypergiant.com",
