add audit script

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/gohypergiant/standard-toolkit"
   },
   "scripts": {
+    "audit:docblocks": "pnpm zx scripts/audit-docblocks.mjs",
     "bench": "turbo bench",
     "build": "turbo build",
     "build:design-preview": "pnpm --filter=@accelint/design-system exec ladle build && pnpm --filter=@accelint/design-toolkit build-storybook -o ../../packages/design-system/build/design-toolkit",
