--- a/lefthook.yml
+++ b/lefthook.yml
@@ -16,4 +16,7 @@ pre-commit:
       run: pnpm run sort-imports
       stage_fixed: true
       priority: 4
+    validate-docblocks:
+      run: pnpm run audit:docblocks || true
+      priority: 5
 
