--- a/packages/bus/package.json
+++ b/packages/bus/package.json
@@ -38,13 +38,18 @@
   "devDependencies": {
     "@accelint/typescript-config": "workspace:*",
     "@accelint/vitest-config": "workspace:*",
+    "@types/react": "^19.1.9",
     "esbuild-fix-imports-plugin": "1.0.21",
+    "react": "^19.0.0",
     "tsup": "8.5.0",
     "vitest": "2.1.3",
     "vitest-broadcast-channel-mock": "0.1.0"
   },
   "dependencies": {
     "typescript": "^5.8.3"
+  },
+  "optionalDependencies": {
+    "react": "^19.0.0"
   },
   "$schema": "https://json.schemastore.org/package",
   "author": "https://hypergiant.com",
