--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "overrides": {
       "@react-stately/datepicker": "3.13.0",
       "@internationalized/date": "3.8.0",
-      "@docusaurus/plugin-debug@3.7.0>react-json-view-lite": "^2.0.0"
+      "undici": "7.12.0"
     },
     "peerDependencyRules": {
       "allowedVersions": {
@@ -71,6 +71,9 @@
         "vitest": "2.1.3"
       }
     }
+  },
+  "pnpmOverridesReasons": {
+    "undici": "https://github.com/nodejs/undici/issues/4374 (No support for Node 18)"
   },
   "type": "module"
 }
