feat: 🎸 update hooks to be type safe

--- a/packages/bus/tsconfig.json
+++ b/packages/bus/tsconfig.json
@@ -9,10 +9,13 @@
     "**/*.test-d.ts"
   ],
   "compilerOptions": {
+    "jsx": "react-jsx",
+    "lib": ["ESNext", "DOM"],
     "rootDir": "src",
     "outDir": "dist",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "types": ["@testing-library/jest-dom"]
   }
 }
