--- a/tooling/smeegl/package.json
+++ b/tooling/smeegl/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@accelint/smeegl",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": false,
   "license": "Apache-2.0",
   "repository": {
@@ -36,6 +36,7 @@
   "dependencies": {
     "ansis": "4.0.0",
     "commander": "14.0.0",
+    "crc32-universal": "^1.0.1",
     "esbuild-plugin-file-path-extensions": "2.1.3",
     "globby": "14.1.0",
     "inquirer": "12.6.1",
