--- a/design-toolkit/components/package.json
+++ b/design-toolkit/components/package.json
@@ -48,13 +48,18 @@
   },
   "scripts": {
     "bench": "pnpm vitest bench --run --dir src",
-    "build": "pnpm gen:tokens && pnpm gen:variants && pnpm tsup && pnpm build:css",
+    "build": "pnpm generate && pnpm license && pnpm format && pnpm tsup && pnpm build:css",
     "build:css": "pnpm tailwindcss -i ./src/index.css -o ./dist/styles.css",
     "dev": "pnpm tsc --watch",
     "gen:tokens": "node scripts/generate-tokens.mjs",
     "gen:variants": "node scripts/generate-variants.mjs",
-    "index": "pnpm zx ../../scripts/indexer.mjs design-toolkit/components",
+    "generate": "pnpm gen:tokens && pnpm gen:variants",
+    "license:tokens": "pnpm zx ../../scripts/license.mjs --files ./src/tokens",
+    "license:variants": "pnpm zx ../../scripts/license.mjs --files ./src/variants",
+    "license": "pnpm license:tokens && pnpm license:variants",
     "lint": "pnpm biome lint",
+    "format": "pnpm biome format . --write",
+    "index": "pnpm zx ../../scripts/indexer.mjs design-toolkit/components",
     "preview": "pnpm storybook dev -p 6006",
     "preview:docs": "pnpm storybook dev --docs -p 6006",
     "test": "pnpm vitest --dir=src",
