--- a/tooling/smeegl/package.json
+++ b/tooling/smeegl/package.json
@@ -22,13 +22,17 @@
     "./package.json": "./package.json"
   },
   "scripts": {
-    "build": "pnpm tsc",
+    "build": "pnpm tsc && pnpm license && pnpm format",
     "lint": "pnpm biome lint",
-    "test": "pnpm vitest --dir=src"
+    "format": "pnpm biome format . --write",
+    "license": "pnpm zx ../../scripts/license.mjs",
+    "test": "pnpm vitest --dir=test",
+    "postinstall": "pnpm run build"
   },
   "devDependencies": {
     "@accelint/typescript-config": "workspace:*",
     "@accelint/vitest-config": "workspace:*",
+    "@types/lodash": "4.17.20",
     "@types/node": "^20.17.48",
     "tsup": "8.3.0",
     "vitest": "2.1.3"
@@ -40,6 +44,7 @@
     "esbuild-plugin-file-path-extensions": "2.1.3",
     "globby": "14.1.0",
     "inquirer": "12.6.1",
+    "lodash": "^4.17.21",
     "ora": "8.2.0",
     "true-myth": "9.0.1",
     "typescript": "^5.8.3"
