--- a/design-toolkit/components/package.json
+++ b/design-toolkit/components/package.json
@@ -75,6 +75,7 @@
     "@internationalized/date": "^3.8.2",
     "@radix-ui/react-avatar": "^1.1.10",
     "@react-aria/interactions": "^3.25.3",
+    "@react-aria/overlays": "^3.29.0",
     "@react-aria/ssr": "^3.9.10",
     "@react-aria/utils": "^3.30.0",
     "@react-stately/color": "^3.9.0",
@@ -108,6 +109,7 @@
     "@internationalized/date": "^3.8.2",
     "@radix-ui/react-avatar": "^1.1.10",
     "@react-aria/interactions": "^3.25.3",
+    "@react-aria/overlays": "^3.29.0",
     "@react-aria/ssr": "^3.9.10",
     "@react-aria/utils": "^3.30.0",
     "@react-stately/color": "^3.9.0",
