feat: token overhaul and implement light mode (#442)
* feat: add theming add-on

* feat: add dark and light custom selectors

* feat: change primitive tokens

* feat: remove color prefix to kill tw default color behavior

* feat: apply dark/light to doc pages

* feat: add roe to primitives

* feat: add roe and classification to theme

* feat: refactor semantic.json to include dark and light

* chore: WIP

* feat: color stories

* feat: createThemeProvider for mode toggle

* chore: WIP

* fix: build error

* temp: add generated files, for to compare

* lint

* format tokens.ts after generation

* generate token tweaks

* move toggle to nav

* generate tweaks

* fix token data spacing

* tken migration script

* run token migration on DTK

* next app tweaks

* tidy up unknown tokens. stopping point - need to test all of the storybook tomorrow.

* foundation cleanup

* moar clean

* clean up semantic data

* moar clean

* more tweaks

* update migration script - border -> outline

* border cleanup

* lint. drawer story bg tweak

* tab border+outline tweaks. use shadow

* fix some things after merge

* match figma

* theme provider file name fix. add overrides

* kitchen sink progress

* css overrides test

* didn't use

* better overrides

* ts overrides

* exports

* changesets

* FOUC note

* overrides test update

* revert button changes

* more in kitchen sink

* remove manager

* fix accordion hover

* adjust tv config based on new tokens

* generate static color vars and utilities

* type fix

* build

* fix next app build

* remove unnecessary optional chaining

* classification banner style fixes

* options styles

* unused comment

* storybook theme shenanigans

* token-data and color story rework

* consolidate

* story name

* tidy

* fix: use a11y colors

* fix: simplify elevation shadow and create light mode fork

* Update .changeset/polite-pears-develop.md

* fix: dialog styles

* fix: changelog fragment

* fix: remove empty console.log

* chore: biome no

--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@accelint/bus": "workspace:*",
+    "@accelint/core": "workspace:*",
     "@accelint/design-system": "workspace:*",
     "@accelint/design-toolkit": "workspace:*",
     "@accelint/icons": "workspace:*",
