--- a/design-toolkit/components/package.json
+++ b/design-toolkit/components/package.json
@@ -53,12 +53,13 @@
     "build": "pnpm generate && pnpm license && pnpm format && pnpm tsup && pnpm build:css",
     "build:css": "pnpm tailwindcss -i ./src/index.css -o ./dist/styles.css",
     "dev": "pnpm tsc --watch",
-    "gen:tokens": "node scripts/generate-tokens.mjs",
+    "gen:tokens": "pnpm zx scripts/generate-tokens.mjs",
     "gen:variants": "node scripts/generate-variants.mjs",
     "generate": "pnpm gen:tokens && pnpm gen:variants",
     "license:tokens": "pnpm zx ../../scripts/license.mjs --files ./src/tokens",
     "license:variants": "pnpm zx ../../scripts/license.mjs --files ./src/variants",
     "license": "pnpm license:tokens && pnpm license:variants",
+    "temp:token-migration": "pnpm zx scripts/token-migration.mjs",
     "lint": "pnpm biome lint",
     "format": "pnpm biome format . --write",
     "index": "pnpm zx ../../scripts/indexer.mjs design-toolkit/components",
@@ -122,6 +123,7 @@
     "@storybook/addon-actions": "^8.6.14",
     "@storybook/addon-essentials": "^8.6.14",
     "@storybook/addon-storysource": "^8.6.14",
+    "@storybook/addon-themes": "^8.6.14",
     "@storybook/blocks": "^8.6.14",
     "@storybook/builder-vite": "^8.6.14",
     "@storybook/manager-api": "^8.6.14",
